--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "hla_translation_tool",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "devDependencies": {
     "jest": "^29.6.1",
     "nock": "^14.0.5"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "scripts": {
     "test": "jest"
