--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hla_translation_tool",
-  "version": "1.6.2",
+  "version": "1.7.0",
   "devDependencies": {
     "jest": "^29.6.1",
     "nock": "^14.0.5"
@@ -9,6 +9,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "update-version": "node updateVersion.js"
   }
 }
