--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "hla_translation_tool",
-  "version": "1.10.2",
+  "version": "1.10.3",
   "devDependencies": {
     "jest": "^29.6.1",
+    "jest-environment-jsdom": "^30.0.0",
+    "jsdom": "^26.1.0",
     "nock": "^14.0.5"
   },
   "engines": {
