--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hla_translation_tool",
-  "version": "1.18.0",
+  "version": "1.18.1",
   "devDependencies": {
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^30.0.0",
@@ -11,6 +11,7 @@
     "node": ">=18"
   },
   "scripts": {
+    "pretest": "npm install",
     "test": "jest",
     "update-version": "node updateVersion.js"
   }
