--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hla_translation_tool",
-  "version": "1.32.0",
+  "version": "1.33.0",
   "devDependencies": {
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^30.0.0",
@@ -14,5 +14,8 @@
     "pretest": "npm install",
     "test": "jest",
     "update-version": "node updateVersion.js"
+  },
+  "dependencies": {
+    "chokidar": "^4.0.3"
   }
 }
