--- a/electron/package.json
+++ b/electron/package.json
@@ -1,9 +1,12 @@
 {
   "name": "hla-translation-desktop",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
+  },
+  "dependencies": {
+    "chokidar": "^4.0.3"
   },
   "devDependencies": {
     "electron": "^25.3.1"
