--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "chokidar": "^4.0.3",
-    "lamejs": "^1.2.1"
+    "ffmpeg-static": "^5.2.0",
+    "lamejs": "^1.2.1",
+    "progress": "^2.0.3"
   }
 }
