--- a/electron/package.json
+++ b/electron/package.json
@@ -6,6 +6,7 @@
     "start": "electron ."
   },
   "dependencies": {
+    "archiver": "^6.0.2",
     "chokidar": "^4.0.3"
   },
   "devDependencies": {
