--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "archiver": "^6.0.2",
     "chokidar": "^4.0.3",
     "ffmpeg-static": "^5.2.0",
-    "progress": "^2.0.3"
+    "progress": "^2.0.3",
+    "tesseract.js": "^4.0.2"
   }
 }
