--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 argostranslate
 torch>=2.3
 easyocr>=1.7
-opencv-python-headless
-Pillow
+opencv-python-headless>=4.9.0      # optional
+Pillow>=10.0
