Pin Pillow 10.3 and improve environment check

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ argostranslate
 torch>=2.3
 easyocr>=1.7
 opencv-python-headless>=4.9.0      # optional
-Pillow>=10.0
+Pillow>=10.3,<11                   # 3.12-Wheel vorhanden
