--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ffmpeg-static": "^5.2.0",
     "node-easyocr": "^1.0.9",
     "playwright": "^1.42.1",
-    "progress": "^2.0.3"
+    "progress": "^2.0.3",
+    "ytdl-core": "^4.11.5"
   }
 }
