--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "ffmpeg-static": "^5.2.0",
     "node-easyocr": "^1.0.9",
     "playwright": "^1.42.1",
-    "progress": "^2.0.3",
-    "ytdl-core": "^4.11.5"
+    "progress": "^2.0.3"
   }
 }
