--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "archiver": "^6.0.2",
     "chokidar": "^4.0.3",
+    "extract-zip": "^2.0.1",
     "ffmpeg-static": "^5.2.0",
     "node-easyocr": "^1.0.9",
     "play-dl": "^1.9.7",
