--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "update-version": "node updateVersion.js"
   },
   "dependencies": {
+    "7zip-bin": "^5.2.0",
     "archiver": "^6.0.2",
     "chokidar": "^4.0.3",
     "ffmpeg-static": "^5.2.0",
@@ -24,6 +25,7 @@
     "play-dl": "^1.9.7",
     "playwright": "^1.42.1",
     "progress": "^2.0.3",
+    "unzipper": "^0.12.3",
     "ytdl-core": "^4.11.5"
   }
 }
