--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "play-dl": "^1.9.7",
     "playwright": "^1.42.1",
     "progress": "^2.0.3",
+    "soundtouchjs": "^0.2.1",
     "unzipper": "^0.12.3",
     "ytdl-core": "^4.11.5"
   }
