--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hla_translation_tool",
   "version": "1.40.149",
   "devDependencies": {
+    "fake-indexeddb": "^6.2.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^30.0.0",
     "jsdom": "^26.1.0",
