--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hla_translation_tool",
   "version": "1.40.149",
   "devDependencies": {
+    "fake-indexeddb": "^6.2.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^30.0.0",
     "jsdom": "^26.1.0",
@@ -13,7 +14,7 @@
   },
   "scripts": {
     "pretest": "npm ci --ignore-scripts",
-    "test": "node --unhandled-rejections=warn node_modules/jest/bin/jest.js",
+    "test": "node --experimental-vm-modules --unhandled-rejections=warn node_modules/jest/bin/jest.js",
     "update-version": "node updateVersion.js"
   },
   "dependencies": {
