feat: Speicher-Feature-Flags und Projekt-Schema-Validierung

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "playwright": "^1.42.1",
     "progress": "^2.0.3",
     "unzipper": "^0.12.3",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "zod": "^3.25.76"
   }
 }
