feat(v2): dashboard mit kapitel-progress

--- a/v2/tsconfig.backend.json
+++ b/v2/tsconfig.backend.json
@@ -3,10 +3,10 @@
   "compilerOptions": {
     "module": "CommonJS",
     "outDir": "./dist/backend",
-    "rootDir": "./backend",
+    "rootDir": ".",
     "lib": ["ES2020"],
     "types": ["node"],
     "composite": true
   },
-  "include": ["backend/**/*.ts"]
+  "include": ["backend/**/*.ts", "shared/**/*.ts"]
 }
