feat: Dashboard-Statistiken und Filterlogik für V2

--- a/v2/tsconfig.json
+++ b/v2/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "files": [],
   "references": [
+    { "path": "./tsconfig.shared-lib.json" },
     { "path": "./tsconfig.renderer.json" },
     { "path": "./tsconfig.backend.json" },
     { "path": "./tsconfig.importer.json" }
