--- a/v2/tsconfig.backend.json
+++ b/v2/tsconfig.backend.json
@@ -8,5 +8,6 @@
     "types": ["node"],
     "composite": true
   },
-  "include": ["backend/**/*.ts"]
+  "include": ["backend/**/*.ts"],
+  "references": [{ "path": "./tsconfig.shared-lib.json" }]
 }
